--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="Mantra_logo.png" alt="Mantra EduCare School Logo">
+                <img src="images.png" alt="Mantra EduCare School Logo">
             </div>
             <nav>
                 <ul>
@@ -29,8 +29,7 @@
 
     <section id="home" class="hero">
         <div class="hero-text">
-            <h1>Welcome to Mantra EduCare School</h1>
-            <p>Empowering Young Minds for a Bright Future</p>
+            <img src="r2.png" alt="">
         </div>
         </section>
 
