--- a/courses.html
+++ b/courses.html
@@ -8,18 +8,20 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="Mantra_logo.png" alt="Mantra EduCare School Logo">
+        <div class="header-container">
+            <div class="logo">
+                <img src="images.png" alt="Mantra EduCare School Logo">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html" class="active">About Us</a></li>
+                    <li><a href="courses.html">Courses</a></li>
+                    <li><a href="testimonials.html">Testimonials</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="courses.html">Courses</a></li>
-                <li><a href="testimonials.html">Testimonials</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
     </header>
 
     <section id="courses">
