--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mantra EduCare School</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="home_style.css">
-
 </head>
-
 <body>
     <header>
         <div class="header-container">
             <div class="logo">
                 <img src="images.png" alt="Mantra EduCare School Logo">
+                <div class="menu-toggle" onclick="toggleMenu()">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
             </div>
             <nav>
-                <ul>
+                <ul id="nav-menu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="courses.html">Courses</a></li>
@@ -27,62 +29,22 @@
         </div>
     </header>
 
-    <section id="home" class="hero">
-        <div class="hero-text">
-            <img src="r2.png" alt="">
-        </div>
+    <main>
+        <section class="welcome">
+            <h1>Welcome to Mantra EduCare School</h1>
+            <p>Your journey to excellence in education starts here.</p>
         </section>
+    </main>
 
+    <footer>
+        <p>&copy; 2025 Mantra EduCare School. All rights reserved.</p>
+    </footer>
 
-        <!-- Facilities Section -->
-        <section id="facilities">
-            <h2>Our Facilities</h2>
-            <p>At Mantra EduCare, we provide a state-of-the-art learning environment with modern classrooms, sports
-                facilities, and a well-stocked library.</p>
-            <div class="facility-list">
-                <div class="facility-item">
-                    <h3>Smart Classrooms</h3>
-                    <p>Equipped with the latest technology to enhance the learning experience.</p>
-                </div>
-                <div class="facility-item">
-                    <h3>Sports Complex</h3>
-                    <p>A full-size sports ground for various indoor and outdoor activities.</p>
-                </div>
-                <div class="facility-item">
-                    <h3>Library</h3>
-                    <p>A vast collection of books and digital resources for students to explore and learn.</p>
-                </div>
-            </div>
-        </section>
-
-        <!-- Admissions Section -->
-        <section id="admissions">
-            <h2>Admissions</h2>
-            <p>Mantra EduCare is now accepting applications for the upcoming academic year. We offer a range of programs
-                for
-                students of all ages, from kindergarten to high school.</p>
-            <p>To apply, fill out the online application form or visit our campus for a tour.</p>
-            <a href="admissions.html">Learn More about Admissions</a>
-        </section>
-
-        <!-- Achievements Section -->
-        <section id="achievements">
-            <h2>Our Achievements</h2>
-            <p>Mantra EduCare School has consistently achieved excellent results in academics and extracurricular
-                activities.</p>
-            <ul>
-                <li>Top Performer in State-Level Science Olympiad</li>
-                <li>Winner of the Regional Sports Championship</li>
-                <li>Outstanding Academic Results in Board Examinations</li>
-            </ul>
-        </section>
-
-        <!-- Footer -->
-        <footer>
-            <p>&copy; 2025 Mantra EduCare School | Follow us on:
-                <a href="#">Facebook</a> | <a href="#">Twitter</a> | <a href="#">Instagram</a>
-            </p>
-        </footer>
+    <script>
+        function toggleMenu() {
+            const navMenu = document.getElementById('nav-menu');
+            navMenu.classList.toggle('show');
+        }
+    </script>
 </body>
-
 </html>
