--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mantra EduCare School</title>
   <style>
     /* Reset & Base Styles */
@@ -92,7 +93,72 @@
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     }
 
-    /* Responsive Design */
+    /* About Section */
+    .about {
+      padding: 50px 20px;
+      background-color: #fff;
+      text-align: center;
+    }
+
+    .about h2 {
+      color: #004080;
+      margin-bottom: 20px;
+    }
+
+    .about p {
+      max-width: 800px;
+      margin: auto;
+      font-size: 18px;
+    }
+
+    /* Courses Section */
+    .courses {
+      padding: 50px 20px;
+      background-color: #e6f0ff;
+      text-align: center;
+    }
+
+    .courses h2 {
+      color: #004080;
+      margin-bottom: 20px;
+    }
+
+    .course-list {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 30px;
+    }
+
+    .course-item {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      width: 280px;
+      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.05);
+    }
+
+    /* Footer */
+    footer {
+      background-color: #004080;
+      color: white;
+      text-align: center;
+      padding: 20px 10px;
+      margin-top: 40px;
+    }
+
+    footer a {
+      color: #ffe066;
+      text-decoration: none;
+      margin: 0 8px;
+    }
+
+    footer a:hover {
+      text-decoration: underline;
+    }
+
+    /* Responsive */
     @media (max-width: 768px) {
       .header-container {
         flex-direction: column;
@@ -141,16 +207,26 @@
         max-width: 100%;
         border-radius: 8px;
       }
+
+      .course-list {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .course-item {
+        width: 90%;
+      }
     }
   </style>
 </head>
+
 <body>
 
   <!-- Header -->
   <header>
     <div class="header-container">
       <div class="logo">
-        <img src="images.png" alt="Logo" />
+        <a href="index.html"><img src="images.png" alt="Logo" /></a>
       </div>
 
       <button class="menu-toggle" onclick="toggleMenu()">☰</button>
@@ -158,10 +234,10 @@
       <nav>
         <ul id="nav-links">
           <li><a href="index.html">Home</a></li>
-          <li><a href="#facilities">Facilities</a></li>
-          <li><a href="#admissions">Admissions</a></li>
-          <li><a href="#achievements">Achievements</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="courses.html">Courses</a></li>
+          <li><a href="testimonial.html">Testimonials</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -174,6 +250,34 @@
     </div>
   </section>
 
+  <!-- About Section -->
+  <section class="about">
+    <h2>Welcome to Mantra EduCare</h2>
+    <p>
+      Mantra EduCare School is committed to providing a nurturing and inclusive environment that encourages every student to grow academically, emotionally, and socially. Our dedicated staff, modern infrastructure, and engaging curriculum help shape future-ready citizens.
+    </p>
+  </section>
+
+  <!-- Courses Section -->
+  <section class="courses">
+    <h2>Our Courses</h2>
+    <div class="course-list">
+      <div class="course-item">Primary Education</div>
+      <div class="course-item">Secondary Schooling</div>
+      <div class="course-item">Science & Math Foundation</div>
+      <div class="course-item">Arts & Humanities</div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Mantra EduCare School. All rights reserved.</p>
+    <p>
+      <a href="privacy.html">Privacy Policy</a> |
+      <a href="terms.html">Terms of Use</a>
+    </p>
+  </footer>
+
   <script>
     function toggleMenu() {
       const navLinks = document.getElementById('nav-links');
@@ -182,4 +286,5 @@
   </script>
 
 </body>
+
 </html>
