--- a/testimonials.html
+++ b/testimonials.html
@@ -1,41 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testimonials - Mantra EduCare School</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Testimonials - Mantra EduCare School</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <header>
-        <div class="header-container">
-            <div class="logo">
-                <img src="images.png" alt="Mantra EduCare School Logo">
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html" class="active">About Us</a></li>
-                    <li><a href="courses.html">Courses</a></li>
-                    <li><a href="testimonials.html">Testimonials</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+  <header>
+    <div class="header-container">
+      <div class="logo">
+        <img src="images.png" alt="Mantra EduCare School Logo" />
+      </div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="courses.html">Courses</a></li>
+          <li><a href="testimonials.html" class="active">Testimonials</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-    <section id="testimonials">
-        <h2>What Our Students Say</h2>
-        <div class="testimonial">
-            <p>"Mantra EduCare has provided me with all the tools I need to succeed in life!"</p>
-            <span>- Student Name</span>
-        </div>
-    </section>
+  <section class="page-section">
+    <h2>What Our Students Say</h2>
+    <div class="testimonials-grid">
+      <div class="testimonial-card">
+        <p>"Mantra EduCare has provided me with all the tools I need to succeed in life!"</p>
+        <span>- Aarav Mehta</span>
+      </div>
+      <div class="testimonial-card">
+        <p>"The teachers are very supportive and the courses are extremely well-structured."</p>
+        <span>- Sneha Sharma</span>
+      </div>
+      <div class="testimonial-card">
+        <p>"I enjoyed every moment here. The environment is friendly and encouraging."</p>
+        <span>- Rahul Desai</span>
+      </div>
+      <div class="testimonial-card">
+        <p>"Highly recommended for anyone who wants quality education and guidance."</p>
+        <span>- Anjali Patel</span>
+      </div>
+    </div>
+  </section>
 
-    <footer>
-        <p>&copy; 2025 Mantra EduCare School | Follow us on:
-            <a href="#">Facebook</a> | <a href="#">Twitter</a> | <a href="#">Instagram</a>
-        </p>
-    </footer>
+  <footer>
+    <p>&copy; 2025 Mantra EduCare School | Follow us on:
+      <a href="#">Facebook</a> | <a href="#">Twitter</a> | <a href="#">Instagram</a>
+    </p>
+  </footer>
 </body>
 </html>
