--- a/contact.html
+++ b/contact.html
@@ -1,38 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Contact - Mantra EduCare School</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="images.png" alt="Mantra EduCare School Logo">
+                <img src="images.png" alt="Mantra EduCare School Logo" />
             </div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html" class="active">About Us</a></li>
+                    <li><a href="about.html">About Us</a></li>
                     <li><a href="courses.html">Courses</a></li>
                     <li><a href="testimonials.html">Testimonials</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="contact.html" class="active">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
     <section id="contact">
-        <h2>Contact Us</h2>
-        <p>Email: info@mantraeducare.com</p>
-        <p>Phone: +123 456 7890</p>
+        <div class="container">
+            <h2>Contact Us</h2>
+            <p>We would love to hear from you! Feel free to reach out using the contact information below or by filling out the form.</p>
+            <div class="contact-details-form">
+                <div class="contact-info">
+                    <p><strong>Email:</strong> info@mantraeducare.com</p>
+                    <p><strong>Phone:</strong> +123 456 7890</p>
+                    <p><strong>Address:</strong> AVishal Raw House, 3/B, nr. Shishukunj Vidhya Vihar, opp. Indian Oil Petrol Pump, Jahangir Pura, Surat, Gujarat 395005</p>
+                </div>
+                <form action="#" method="post" class="contact-form">
+                    <input type="text" name="name" placeholder="Your Name" required />
+                    <input type="email" name="email" placeholder="Your Email" required />
+                    <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+                    <button type="submit">Send Message</button>
+                </form>
+            </div>
+        </div>
     </section>
 
     <footer>
         <p>&copy; 2025 Mantra EduCare School | Follow us on:
-            <a href="#">Facebook</a> | <a href="#">Twitter</a> | <a href="#">Instagram</a>
+            <a href="#">Facebook</a> |
+            <a href="#">Twitter</a> |
+            <a href="#">Instagram</a>
         </p>
     </footer>
 </body>
