--- a/courses.html
+++ b/courses.html
@@ -15,8 +15,8 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html" class="active">About Us</a></li>
-                    <li><a href="courses.html">Courses</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="courses.html" class="active">Courses</a></li>
                     <li><a href="testimonials.html">Testimonials</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -26,18 +26,20 @@
 
     <section id="courses">
         <h2>Our Courses</h2>
+        <p class="section-intro">At Mantra EduCare School, we offer age-appropriate and engaging educational programs designed to support early childhood development and prepare children for the future.</p>
+
         <div class="course-grid">
             <div class="course-item">
-                <h3>Course 1</h3>
-                <p>Description of Course 1.</p>
+                <h3>Play Group</h3>
+                <p>Our Play Group program is designed for toddlers aged 2 to 3 years. We focus on developing social interaction, basic motor skills, and communication through fun-filled activities like storytelling, music, free play, and art & craft.</p>
             </div>
             <div class="course-item">
-                <h3>Course 2</h3>
-                <p>Description of Course 2.</p>
+                <h3>Nursery</h3>
+                <p>For children aged 3 to 4 years, our Nursery program blends foundational learning with play. Children are introduced to alphabets, numbers, colors, shapes, and other pre-academic skills while fostering curiosity and imagination.</p>
             </div>
             <div class="course-item">
-                <h3>Course 3</h3>
-                <p>Description of Course 3.</p>
+                <h3>Senior (LKG & UKG)</h3>
+                <p>In the Senior class (LKG & UKG), children aged 4 to 6 years engage in structured learning. Our curriculum focuses on language development, early math, environmental awareness, life skills, and preparation for primary schooling.</p>
             </div>
         </div>
     </section>
