--- a/about.html
+++ b/about.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About Us - Mantra EduCare School</title>
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -11,13 +12,13 @@
   <header>
     <div class="header-container">
       <div class="logo">
-        <img src="images.png" alt="Mantra EduCare School Logo" />
+        <img src="images.png" alt="Mantra EduCare School Logo">
       </div>
-      <button class="menu-toggle">&#9776;</button>
+      <button class="menu-toggle" onclick="toggleMenu()">☰</button>
       <nav>
-        <ul>
+        <ul id="menu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html" class="active">About Us</a></li>
+          <li><a href="about.html">About Us</a></li>
           <li><a href="courses.html">Courses</a></li>
           <li><a href="testimonials.html">Testimonials</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -26,17 +27,22 @@
     </div>
   </header>
 
+
   <section id="about" class="page-section">
     <h2>About Mantra EduCare School</h2>
     <p>
-      At <strong>Mantra EduCare School</strong>, we believe that education is not just about books and exams—it's about nurturing a child’s full potential. We provide a holistic learning environment that encourages curiosity, creativity, and confidence.
+      At <strong>Mantra EduCare School</strong>, we believe that education is not just about books and exams—it's about
+      nurturing a child’s full potential. We provide a holistic learning environment that encourages curiosity,
+      creativity, and confidence.
     </p>
     <p>
-      Established with the vision of transforming traditional education, Mantra EduCare blends academic excellence with life skills, ensuring every student is prepared for future challenges.
+      Established with the vision of transforming traditional education, Mantra EduCare blends academic excellence with
+      life skills, ensuring every student is prepared for future challenges.
     </p>
     <h3>Our Mission</h3>
     <p>
-      To cultivate a safe, inclusive, and inspiring environment where every student is empowered to reach their full potential.
+      To cultivate a safe, inclusive, and inspiring environment where every student is empowered to reach their full
+      potential.
     </p>
     <h3>Core Values</h3>
     <ul>
@@ -65,4 +71,11 @@
     });
   </script>
 </body>
+<script>
+function toggleMenu() {
+  const menu = document.getElementById('menu');
+  menu.classList.toggle('show');
+}
+</script>
+
 </html>
