--- a/contact.html
+++ b/contact.html
@@ -1,38 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact - Mantra EduCare School</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="images.png" alt="Mantra EduCare School Logo" />
+                <img src="images.png" alt="Mantra EduCare School Logo">
             </div>
+            <button class="menu-toggle" onclick="toggleMenu()">☰</button>
             <nav>
-                <ul>
+                <ul id="menu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="courses.html">Courses</a></li>
                     <li><a href="testimonials.html">Testimonials</a></li>
-                    <li><a href="contact.html" class="active">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
+
     <section id="contact">
         <div class="container">
             <h2>Contact Us</h2>
-            <p>We would love to hear from you! Feel free to reach out using the contact information below or by filling out the form.</p>
+            <p>We would love to hear from you! Feel free to reach out using the contact information below or by filling
+                out the form.</p>
             <div class="contact-details-form">
                 <div class="contact-info">
                     <p><strong>Email:</strong> info@mantraeducare.com</p>
                     <p><strong>Phone:</strong> +123 456 7890</p>
-                    <p><strong>Address:</strong> AVishal Raw House, 3/B, nr. Shishukunj Vidhya Vihar, opp. Indian Oil Petrol Pump, Jahangir Pura, Surat, Gujarat 395005</p>
+                    <p><strong>Address:</strong> AVishal Raw House, 3/B, nr. Shishukunj Vidhya Vihar, opp. Indian Oil
+                        Petrol Pump, Jahangir Pura, Surat, Gujarat 395005</p>
                 </div>
                 <form action="#" method="post" class="contact-form">
                     <input type="text" name="name" placeholder="Your Name" required />
@@ -52,4 +58,13 @@
         </p>
     </footer>
 </body>
+
+<script>
+function toggleMenu() {
+  const menu = document.getElementById('menu');
+  menu.classList.toggle('show');
+}
+</script>
+
+
 </html>
